--- a/Frontend/src/layouts/Layout.astro
+++ b/Frontend/src/layouts/Layout.astro
@@ -21,6 +21,9 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	@tailwind base;
+	@tailwind components;
+	@tailwind utilities;
 	:root {
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
@@ -47,5 +50,37 @@ const { title } = Astro.props;
 			Bitstream Vera Sans Mono,
 			Courier New,
 			monospace;
+	}
+
+
+
+	@layer components{
+		.full-section{
+			@apply h-screen w-screen laptop:h-[60rem] monitor:h-[62rem];
+		}
+		
+		.col{
+			@apply flex flex-col
+		}
+		.center{
+			@apply flex flex-row justify-center items-center
+		}
+		.center-row-nomid{
+			@apply flex flex-row justify-center items-start
+		}
+		.center-col{
+			@apply flex flex-col justify-center items-center
+		}
+		.center-col-nomid{
+			@apply flex flex-col justify-normal items-center
+		}
+		.bg-comb{
+			@apply bg-cover bg-center bg-no-repeat bg-local
+		}
+
+		.small-responsive{
+			@apply w-52 h-5 laptop:w-[40rem] laptop:h-10 monitor:w-[50rem] monitor:h-10
+		}
+
 	}
 </style>
