Astro migrating almost there you know

--- a/Frontend/src/features/header/components/Header.astro
+++ b/Frontend/src/features/header/components/Header.astro
@@ -10,7 +10,7 @@ import { MdAccountBalance } from "react-icons/md";
     <div class="w-full h-20">
 
     </div>
-    <div class="h-52 center laptop:bg-comb bg-header bg-cover w-full laptop:h-2/5 bg-black relative opacity-70">
+    <div class="h-52 center bg-header bg-cover w-full laptop:h-[30rem] bg-black relative opacity-70">
         <div class="small-responsive bg-[#13151a] absolute bottom-0 rounded-t-full"></div>
     </div>
     
