--- a/Frontend/src/pages/index.astro
+++ b/Frontend/src/pages/index.astro
@@ -11,7 +11,7 @@ import Layout from '../layouts/Layout.astro';
 	<main>
 		<Header/>
 		<Specialties/>
-		<Chat actual_user={UserTypeEnum.AnonymousUser} client:load/>
+		<!-- <Chat actual_user={UserTypeEnum.AnonymousUser} client:load/> -->
 	</main>
 </Layout>
 
