Astro migrating complete

--- a/Frontend/src/features/specialties/components/Specialties.astro
+++ b/Frontend/src/features/specialties/components/Specialties.astro
@@ -1,7 +1,9 @@
 ---
 import Options from "./interactive/Options"
+import Title from "@shared/components/Title.astro"
 ---
 
 <section class="full-section center-col-nomid">
+    <Title title="Nuestros Servicios"/>
     <Options client:visible/>
 </section>
