--- a/Frontend/src/pages/administrator/home/index.astro
+++ b/Frontend/src/pages/administrator/home/index.astro
@@ -2,6 +2,8 @@
 import ChatPanel from "@components/admin/chatPanel/components/ChatPanel";
 import Layout from "src/layouts/Layout.astro";
 
+import WithAuth from "@components/admin/withAuth/components/WithAuth"
+
 ---
 
 <Layout title="-">
