New images and few section details

--- a/Frontend/src/features/header/components/Header.astro
+++ b/Frontend/src/features/header/components/Header.astro
@@ -11,7 +11,7 @@ import { MdAccountBalance } from "react-icons/md";
 
     </div>
     <div class="h-52 center bg-header bg-cover w-full laptop:h-[30rem] bg-black relative opacity-70">
-        <div class="small-responsive bg-[#13151a] absolute bottom-0 rounded-t-full"></div>
+        <div class="small-responsive bg-[#13151a] absolute -bottom-2 rounded-t-full"></div>
     </div>
     
     <div class="center-col w-full h-2/3 gap-8 laptop:gap-14">
@@ -51,22 +51,7 @@ import { MdAccountBalance } from "react-icons/md";
                 
             </div>
         </section>
-        <!-- <div class='center-col-nomid card'>
-            <img class="w-20 h-20 opacity-60" src="static/header/celeridad.svg"/>
-            <h3 class="text-xl uppercase opacity-50 font-semibold">celeridad</h3>
-            
 
-            <p class="text-center text-[16px] opacity-70 font-light">Sabemos que los tiempos judiciales son absurdos, no obstante, nos empeñamos en hacer un seguimiento de cada caso con el fin de que avance lo más rápido posible, haciendole saber al cliente constantemente el estado de su causa.</p>
-            
-        </div>
-        <div class='center-col-nomid card'>
-            <img class="w-20 h-20 opacity-60" src="static/header/costos.svg"/>
-            <h3 class="text-xl uppercase opacity-50 font-semibold">costos</h3>
-            
-
-            <p class="text-center text-[16px] opacity-70 font-light">Estamos al tanto que el acceso a la justicia no es económico, por eso brindamos consulta telefónica gratuita y en la mayoria de los casos honorarios a resultado, sin que tengas que hacer un desembolso para iniciar tu causa.</p>
-            
-        </div> -->
 
     </div>
     
