--- a/Frontend/src/layouts/Layout.astro
+++ b/Frontend/src/layouts/Layout.astro
@@ -61,13 +61,13 @@ const { title } = Astro.props;
 			@apply w-full h-full
 		}
 		.screen{
-			@apply w-screen h-screen
+			@apply w-screen h-screen 
 		}
 		.full-section{
-			@apply laptop:h-[60rem] monitor:h-[62rem];
+			@apply laptop:h-[60rem] monitor:h-[62rem] mt-10 mb-10;
 		}
 		.medium-section{
-			@apply laptop:h-[30rem] monitor:h-[35rem];
+			@apply laptop:h-[30rem] monitor:h-[35rem] mt-10 mb-10;
 		}
 		.col{
 			@apply flex flex-col
