--- a/Frontend/src/features/inmobiliario/components/Inmobiliario.astro
+++ b/Frontend/src/features/inmobiliario/components/Inmobiliario.astro
@@ -4,9 +4,9 @@ import Item from "@components/inmobiliario/components/Item.astro"
 
 ---
 
-<section class="monitor:full-section center-col-nomid">
+<section class="monitor:big-section center-col-nomid bg-primary">
 
-    <Title title="ADMINISTRACION DE CONSORCIOS"/>
+    <Title color="secondary" title="ADMINISTRACION DE CONSORCIOS"/>
 
     <section class="center-col-nomid monitor:center h-2/3">
 
