--- a/Frontend/src/features/inmobiliario/components/Item.astro
+++ b/Frontend/src/features/inmobiliario/components/Item.astro
@@ -30,7 +30,7 @@ const {title, color} = Astro.props;
         }
 
         .title{
-            @apply break-words text-center uppercase font-bold text-lg monitor:text-lg  bigmonitor:text-2xl leading-7
+            @apply break-words text-center uppercase font-bold text-lg monitor:text-lg  bigmonitor:text-2xl leading-7 text-text2
         }
     }
 </style>
