--- a/Frontend/src/features/specialties/components/Specialties.astro
+++ b/Frontend/src/features/specialties/components/Specialties.astro
@@ -3,7 +3,7 @@ import Options from "./interactive/Options"
 import Title from "@shared/components/Title.astro"
 ---
 
-<section class="full-section center-col-nomid">
-    <Title title="Nuestros Servicios"/>
+<section class="full-section center-col-nomid bg-primary z-20">
+    <Title color="secondary" title="Nuestros Servicios"/>
     <Options client:visible/>
 </section>
