--- a/Frontend/src/features/stats/components/Stats.astro
+++ b/Frontend/src/features/stats/components/Stats.astro
@@ -5,8 +5,8 @@ import Item from "./Item.astro";
 
 ---
 
-<section class="center-col gap-32 laptop:h-[17rem] laptop:center laptop:gap-10 bg-comb bg-stats relative mt-10">
-    <div class="absolute full bg-red-700 opacity-60"></div>
+<section class="center-col gap-32 laptop:h-[17rem] laptop:center laptop:gap-10 bg-comb bg-stats relative">
+    <div class="absolute full bg-secondary opacity-60"></div>
 
     <Item number={99} symbol="%">
         <FaBalanceScale className="w-20 h-20 laptop:w-24 laptop:h-24 text-gold-color"/>
