--- a/Frontend/src/features/footer/components/Footer.astro
+++ b/Frontend/src/features/footer/components/Footer.astro
@@ -6,7 +6,7 @@ import { IoIosMail } from "react-icons/io";
 import { FaFacebookSquare, FaWhatsappSquare, FaInstagramSquare } from "react-icons/fa";
 ---
 
-<footer class="laptop:medium-section center-col laptop:center gap-10 monitor:gap-20 mt-10">
+<footer id="footer" class="laptop:medium-section center-col laptop:center gap-10 monitor:gap-20 mt-10">
     <section class="laptop:w-[30rem] h-full center-col laptop:block ">
         <img src="/static/iconos/logoT.png" class="w-1/3"/>
         <div class="w-96 laptop:w-full">
@@ -18,7 +18,7 @@ import { FaFacebookSquare, FaWhatsappSquare, FaInstagramSquare } from "react-ico
     <section class="w-96 h-full center-col-nomid gap-4">
         <h3 class="text-2xl font-thin mt-10">Informacion de contacto</h3>
         <div class="w-10 h-0.5 bg-yellow-800"></div>
-        <article class="w-full center-col items-start gap-10">
+        <article class="laptop:w-full center-col items-start gap-10">
 
             <div class="center justify-start gap-2">
                 <div class="bg-yellow-800 p-2 rounded-lg">
@@ -58,7 +58,7 @@ import { FaFacebookSquare, FaWhatsappSquare, FaInstagramSquare } from "react-ico
             <FaFacebookSquare className="w-10 h-10 text-gold-color"/>
             <FaInstagramSquare className="w-10 h-10 text-gold-color"/>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1702.579533237954!2d-64.19113304939945!3d-31.40974325536341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432987ec755ccbf%3A0xadb66fc5ef2bd8b9!2sAv.%20Figueroa%20Alcorta%20320%2C%20X5000%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1722406065584!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full h-96 laptop:h-1/2"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1702.579533237954!2d-64.19113304939945!3d-31.40974325536341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432987ec755ccbf%3A0xadb66fc5ef2bd8b9!2sAv.%20Figueroa%20Alcorta%20320%2C%20X5000%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1722406065584!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-4/5 laptop:w-full h-96 laptop:h-1/2"></iframe>
 
     </section>
 </footer>
