--- a/Frontend/src/layouts/Layout.astro
+++ b/Frontend/src/layouts/Layout.astro
@@ -64,10 +64,13 @@ const { title } = Astro.props;
 			@apply w-screen h-screen 
 		}
 		.full-section{
-			@apply laptop:h-[60rem] monitor:h-[62rem] mt-10 mb-10;
+			@apply laptop:h-[45rem] bigmonitor:h-[62rem];
+		}
+		.big-section{
+			@apply laptop:h-[45rem] bigmonitor:h-[62rem];
 		}
 		.medium-section{
-			@apply laptop:h-[30rem] monitor:h-[35rem] mt-10 mb-10;
+			@apply laptop:h-[30rem] monitor:h-[35rem] mb-10;
 		}
 		.col{
 			@apply flex flex-col
