--- a/Frontend/src/features/footer/components/Footer.astro
+++ b/Frontend/src/features/footer/components/Footer.astro
@@ -9,13 +9,13 @@ import { FaFacebookSquare, FaWhatsappSquare, FaInstagramSquare } from "react-ico
 <footer id="footer" class="laptop:medium-section center-col laptop:center gap-10 monitor:gap-20 mt-10">
     <section class="laptop:w-[30rem] h-full center-col laptop:block ">
         <img src="/static/iconos/logoT.png" class="w-1/3"/>
-        <div class="w-96 laptop:w-full">
+        <div class="w-52 laptop:w-full">
             <p class="text-center monitor:text-justify">Tu tranquilidad es nuestra prioridad. Contáctanos hoy y recibe asesoría legal personalizada.</p>
             <p class="text-center monitor:text-start">¡Estamos aquí para ayudarte!</p>
         </div>
 
     </section>
-    <section class="w-96 h-full center-col-nomid gap-4">
+    <section class="laptop:w-96 h-full center-col-nomid gap-4">
         <h3 class="text-2xl font-thin mt-10">Informacion de contacto</h3>
         <div class="w-10 h-0.5 bg-yellow-800"></div>
         <article class="laptop:w-full center-col items-start gap-10">
@@ -50,7 +50,7 @@ import { FaFacebookSquare, FaWhatsappSquare, FaInstagramSquare } from "react-ico
         </article>
 
     </section>
-    <section class="w-96 center-col-nomid gap-4 h-full">
+    <section class="laptop:w-96 center-col-nomid gap-4 h-full">
         <h3 class="text-2xl font-thin mt-10">Enlaces</h3>
         <div class="w-10 h-0.5 bg-yellow-800"></div>
         <div class="center gap-10">
