--- a/Frontend/src/features/inmobiliario/components/Inmobiliario.astro
+++ b/Frontend/src/features/inmobiliario/components/Inmobiliario.astro
@@ -4,11 +4,11 @@ import Item from "@components/inmobiliario/components/Item.astro"
 
 ---
 
-<section class="monitor:big-section center-col-nomid bg-primary">
+<section class="monitor:big-section center-col-nomid bg-secondary bg-comb bg-building relative">
+    <div class="absolute full bg-boxes opacity-60"></div>
+    <Title description="Tu tranquilidad, nuestra prioridad en la gestión de consorcios" color="primary" title="ADMINISTRACION DE CONSORCIOS"/>
 
-    <Title color="secondary" title="ADMINISTRACION DE CONSORCIOS"/>
-
-    <section class="center-col-nomid monitor:center h-2/3">
+    <section class="center-col-nomid monitor:center h-2/3 z-30">
 
         <Item title="auditoria contable inicial" color="bg-blue-300">
             <img class="w-2/3 h-2/3" src="static/other/auditoria.svg"/>
