--- a/Frontend/src/features/specialties/components/Specialties.astro
+++ b/Frontend/src/features/specialties/components/Specialties.astro
@@ -4,6 +4,6 @@ import Title from "@shared/components/Title.astro"
 ---
 
 <section class="full-section center-col-nomid bg-primary z-20">
-    <Title color="secondary" title="Nuestros Servicios"/>
+    <Title color="boxes" title="Nuestros Servicios" description="Encuentra respuestas a tus preguntas sobre nuestros servicios aquí"/>
     <Options client:visible/>
 </section>
