--- a/Frontend/src/features/header/components/Navbar.astro
+++ b/Frontend/src/features/header/components/Navbar.astro
@@ -2,14 +2,14 @@
 import { IoMenuOutline } from "react-icons/io5";
 import { FaWhatsapp } from "react-icons/fa";
 ---
-<nav class="flex monitor:h-14 bigmonitor:h-20 items-center justify-between w-full mx-auto bg-secondary">
-    <div class="h-full w-16 p-3 monitor:w-20 center ml-10 bg-black">
+<nav class="flex monitor:h-14 bigmonitor:h-20 items-center justify-between w-full mx-auto bg-boxes">
+    <div class="h-full w-16 p-3 monitor:w-20 center ml-10 ">
         <img class="" src="/static/iconos/logo.png"/>
     </div>
     
-    <div class="mr-10 center gap-2 bg-teal-400 p-1 rounded-lg">
-        <FaWhatsapp className="text-green-500"/>
-        <button class="text-sm text-yellow-700">Contactanos</button>
+    <div class="mr-10 center gap-2 bg-primary p-1 rounded-lg">
+        <FaWhatsapp className="text-green-600"/>
+        <button class="text-sm text-boxes">Contactanos</button>
     </div>
     
 
