--- a/Frontend/src/features/stats/components/Item.astro
+++ b/Frontend/src/features/stats/components/Item.astro
@@ -14,7 +14,7 @@ const {number, symbol} = Astro.props;
 ---
 
 
-<div class="center-col gap-10 laptop:h-full laptop:w-[25rem] laptop:center laptop:gap-5 z-10">
+<div class="center-col gap-10 laptop:h-full laptop:w-[25rem] laptop:center laptop:gap-5 z-10 mt-10 mb-10">
     <slot></slot>
     <div class="center-col gap-2 laptop:gap-3">
         <div id="counter" class="h-2">
