--- a/Frontend/src/features/header/components/Header.astro
+++ b/Frontend/src/features/header/components/Header.astro
@@ -24,7 +24,7 @@ import Navbar from "./Navbar.astro";
             
         </div>
         
-        <h2 class="text-3xl mb-10 text-boxes uppercase font-semibold">¿Por que elegirnos?</h2>
+        <h2 class="text-3xl text-center mb-10 text-boxes uppercase font-semibold">¿Por que elegirnos?</h2>
 
         <section class="w-full h-full center-col monitor:center-row-nomid bigmonitor:center gap-12 mb-10">
 
@@ -78,7 +78,7 @@ import Navbar from "./Navbar.astro";
 
     @layer components{
         .card{
-            @apply w-[90%] h-40  monitor:w-[24rem] monitor:h-[11rem] bigmonitor:h-[12rem] bigmonitor:w-[30rem]  rounded-lg p-4 laptop:gap-2 bg-boxes text-text2
+            @apply w-[90%]  monitor:w-[24rem] monitor:h-[11rem] bigmonitor:h-[12rem] bigmonitor:w-[30rem]  rounded-lg p-4 laptop:gap-2 bg-boxes text-text2
         }
 
         .card-text{
