--- a/Frontend/src/features/header/components/Navbar.astro
+++ b/Frontend/src/features/header/components/Navbar.astro
@@ -1,17 +1,20 @@
 ---
 import { IoMenuOutline } from "react-icons/io5";
 import { FaWhatsapp } from "react-icons/fa";
+import { WHATSAPP_URL } from "shared/constants";
+import UrlWrapper from "shared/components/UrlWrapper.astro";
 ---
-<nav class="flex monitor:h-14 bigmonitor:h-20 items-center justify-between w-full mx-auto bg-boxes">
+<nav class="flex monitor:h-14 bigmonitor:h-20 items-center center laptop:justify-between w-full mx-auto bg-boxes">
     <div class="h-full w-16 p-3 monitor:w-20 center ml-10 ">
         <img class="" src="/static/iconos/logo.png"/>
     </div>
     
-    <div class="mr-10 center gap-2 bg-primary p-1 rounded-lg">
-        <FaWhatsapp className="text-green-600"/>
-        <button class="text-sm text-boxes">Contactanos</button>
-    </div>
-    
+    <UrlWrapper url={WHATSAPP_URL}>
+        <div class=" hidden laptop:center mr-10 center gap-2 bg-primary p-1 rounded-lg">
+            <FaWhatsapp className="text-green-600"/>
+            <button class="text-sm text-boxes px-1 py-1">Contactanos</button>
+        </div>
+    </UrlWrapper>
 
 </nav>
 
