--- a/Frontend/src/features/inmobiliario/components/Item.astro
+++ b/Frontend/src/features/inmobiliario/components/Item.astro
@@ -13,7 +13,7 @@ const {title, color} = Astro.props;
             
     </div>
     <div class="w-44 h-32 center monitor:block monitor:mt-4 monitor:absolute left-[100%] monitor:w-full monitor:left-0 monitor:top-[100%] ">
-        <h3 class="title leading-snug">{title}</h3>
+        <h3 class="title leading-snug text-white">{title}</h3>
     </div>
     <!--  -->
 </div>
