--- a/Frontend/src/pages/index.astro
+++ b/Frontend/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Stats from '@components/stats/components/Stats.astro';
-import Chat from '../features/chat/components/interactive/Chat';
+
 import { UserTypeEnum } from '../features/chat/enums/chat.enum';
 import Header from '../features/header/components/Header.astro';
 import Specialties from '../features/specialties/components/Specialties.astro';
@@ -10,6 +10,9 @@ import Title from '@shared/components/Title.astro';
 import Reviews from '@components/reviews/components/Reviews.astro';
 import Inmobiliario from '@components/inmobiliario/components/Inmobiliario.astro';
 import Footer from '@components/footer/components/Footer.astro';
+import { AiOutlineWhatsApp } from "react-icons/ai";
+import Whatsapp from '@components/whatsapp/Whatsapp.astro';
+import Chat from '@components/chat/components/Chat';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -17,11 +20,12 @@ import Footer from '@components/footer/components/Footer.astro';
 		<Header/>
 		<Stats/>
 		<Specialties/>
-
+		
 		<Inmobiliario/>
 		<Reviews/>
 		<Footer/>
 		<Chat actual_user={UserTypeEnum.AnonymousUser} client:load/>
+		<Whatsapp/>
 	</main>
 </Layout>
 
