--- a/Frontend/src/features/footer/components/Footer.astro
+++ b/Frontend/src/features/footer/components/Footer.astro
@@ -1,11 +1,17 @@
 ---
+// Components
+import UrlWrapper from "shared/components/UrlWrapper.astro";
+
+// React Icons
 import { FaLocationDot } from "react-icons/fa6";
 import { IoCall } from "react-icons/io5";
 import { GoClockFill } from "react-icons/go";
 import { IoIosMail } from "react-icons/io";
 import { FaFacebookSquare, FaWhatsappSquare, FaInstagramSquare } from "react-icons/fa";
-import UrlWrapper from "shared/components/UrlWrapper.astro";
+
+// Constants
 import { WHATSAPP_URL, FACEBOOK_URL, INSTAGRAM_URL } from "shared/constants";
+
 ---
 
 <footer id="footer" class="laptop:medium-section center-col laptop:center gap-10 monitor:gap-20 mt-10">
