--- a/Frontend/src/features/header/components/Header.astro
+++ b/Frontend/src/features/header/components/Header.astro
@@ -1,9 +1,13 @@
 ---
-import { FaRegHandshake, FaSearchDollar} from "react-icons/fa";
+// Components
+import Navbar from "./Navbar.astro";
+
+// React Icons
+import { FaRegHandshake, FaSearchDollar } from "react-icons/fa";
 import { FaHandHoldingDollar } from "react-icons/fa6";
 import { BsHexagonFill } from "react-icons/bs";
 import { MdAccountBalance } from "react-icons/md";
-import Navbar from "./Navbar.astro";
+
 
 ---
 
