--- a/Frontend/src/features/header/components/Navbar.astro
+++ b/Frontend/src/features/header/components/Navbar.astro
@@ -1,8 +1,14 @@
 ---
+// Components
+import UrlWrapper from "shared/components/UrlWrapper.astro";
+
+// React Icons
 import { IoMenuOutline } from "react-icons/io5";
 import { FaWhatsapp } from "react-icons/fa";
+
+// Constants
 import { WHATSAPP_URL } from "shared/constants";
-import UrlWrapper from "shared/components/UrlWrapper.astro";
+
 ---
 <nav class="flex monitor:h-14 bigmonitor:h-20 items-center center laptop:justify-between w-full mx-auto bg-boxes">
     <div class="h-full w-16 p-3 monitor:w-20 center ml-10 ">
