--- a/Frontend/src/features/inmobiliario/components/Inmobiliario.astro
+++ b/Frontend/src/features/inmobiliario/components/Inmobiliario.astro
@@ -1,6 +1,8 @@
 ---
+// Components
 import Title from "@shared/components/Title.astro";
-import Item from "@components/inmobiliario/components/Item.astro"
+import Item from "@components/inmobiliario/components/Item.astro";
+
 
 ---
 
