--- a/Frontend/src/features/reviews/components/Reviews.astro
+++ b/Frontend/src/features/reviews/components/Reviews.astro
@@ -1,6 +1,8 @@
 ---
-import ReviewSlider from "@components/reviews/components/ReviewSlider"
-import Title from "@shared/components/Title.astro"
+// Components
+import ReviewSlider from "@components/reviews/components/ReviewSlider";
+import Title from "@shared/components/Title.astro";
+
 ---
 
 <section class="medium-section center-col-nomid relative bg-primary">
