--- a/Frontend/src/features/stats/components/Stats.astro
+++ b/Frontend/src/features/stats/components/Stats.astro
@@ -1,7 +1,10 @@
 ---
+//Components
+import Item from "./Item.astro";
+
+//React Icons
 import { FaBalanceScale,FaBriefcase } from "react-icons/fa";
 import { FaPeopleGroup } from "react-icons/fa6";
-import Item from "./Item.astro";
 
 ---
 
