--- a/Frontend/src/features/whatsapp/Whatsapp.astro
+++ b/Frontend/src/features/whatsapp/Whatsapp.astro
@@ -1,6 +1,11 @@
 ---
-import { AiOutlineWhatsApp } from "react-icons/ai";
+//Components
 import UrlWrapper from "shared/components/UrlWrapper.astro";
+
+//React Icons
+import { AiOutlineWhatsApp } from "react-icons/ai";
+
+//Constants
 import { WHATSAPP_URL } from "shared/constants";
 
 
