--- a/Frontend/src/pages/administrator/login/index.astro
+++ b/Frontend/src/pages/administrator/login/index.astro
@@ -1,6 +1,6 @@
 ---
+// Components
 import Login from "@components/admin/login/components/interactive/Login";
-import { Router } from 'react-router-dom'
 import Layout from "src/layouts/Layout.astro";
 
 ---
