--- a/Frontend/src/pages/index.astro
+++ b/Frontend/src/pages/index.astro
@@ -1,18 +1,18 @@
 ---
+// Components
 import Stats from '@components/stats/components/Stats.astro';
-
-import { UserTypeEnum } from '../features/chat/enums/chat.enum';
 import Header from '../features/header/components/Header.astro';
 import Specialties from '../features/specialties/components/Specialties.astro';
-
 import Layout from '../layouts/Layout.astro';
-import Title from '@shared/components/Title.astro';
 import Reviews from '@components/reviews/components/Reviews.astro';
 import Inmobiliario from '@components/inmobiliario/components/Inmobiliario.astro';
 import Footer from '@components/footer/components/Footer.astro';
-import { AiOutlineWhatsApp } from "react-icons/ai";
 import Whatsapp from '@components/whatsapp/Whatsapp.astro';
 import Chat from '@components/chat/components/Chat';
+
+// Enums
+import { UserTypeEnum } from '../features/chat/enums/chat.enum';
+
 ---
 
 <Layout title="Welcome to Astro.">
