--- a/Frontend/src/features/reviews/components/Reviews.astro
+++ b/Frontend/src/features/reviews/components/Reviews.astro
@@ -2,14 +2,13 @@
 // Components
 import ReviewSlider from "@components/reviews/components/ReviewSlider";
 import Title from "@shared/components/Title.astro";
-
 ---
 
 <section class="medium-section center-col-nomid relative bg-primary">
     
     
     <Title description="Te acercamos los comentarios de algunos clientes" color="boxes" title="Opinones de nuestros clientes"/>
-    <section class="z-10 full center">
+    <section class="full center">
         <ReviewSlider client:visible/>
     </section>
     
