--- a/Frontend/src/features/stats/components/Stats.astro
+++ b/Frontend/src/features/stats/components/Stats.astro
@@ -8,16 +8,16 @@ import { FaPeopleGroup } from "react-icons/fa6";
 
 ---
 
-<section class="center-col gap-32 laptop:h-[17rem] laptop:center laptop:gap-10 bg-comb bg-stats relative">
+<section class="center-col laptop:h-[17rem] laptop:center laptop:gap-10 bg-comb bg-stats relative">
     <div class="absolute full bg-boxes opacity-60"></div>
 
-    <Item number={99} symbol="%">
+    <Item number={99} symbol="%" description="Casos resueltos">
         <FaBalanceScale className="w-20 h-20 laptop:w-24 laptop:h-24 text-gold-color"/>
     </Item>
-    <Item number={500} symbol="+">
+    <Item number={10} symbol="+" description="Años de experiencia">
         <FaBriefcase className="w-20 h-20 laptop:w-24 laptop:h-24 text-gold-color"/>
     </Item>
-    <Item number={99} symbol="%">
+    <Item number={99} symbol="%" description="Clientes satisfechos">
         <FaPeopleGroup className="w-20 h-20 laptop:w-24 laptop:h-24 text-gold-color"/>
     </Item>
 
