--- a/Frontend/src/pages/administrator/login/index.astro
+++ b/Frontend/src/pages/administrator/login/index.astro
@@ -4,7 +4,7 @@ import Login from "@components/admin/login/components/interactive/Login";
 import Layout from "src/layouts/Layout.astro";
 
 ---
-<Layout title="sape">
+<Layout title="Login | AD">
     <main>
         <Login client:load/>
     </main>
