--- a/Frontend/src/features/stats/components/Item.astro
+++ b/Frontend/src/features/stats/components/Item.astro
@@ -7,9 +7,10 @@ import Incrementer from './Incrementer';
 interface Props {
     number: number
     symbol: string
+    description: string
 };
 
-const {number, symbol} = Astro.props;
+const {number, symbol, description} = Astro.props;
 
 
 ---
@@ -17,11 +18,11 @@ const {number, symbol} = Astro.props;
 
 <div class="center-col gap-10 laptop:h-full laptop:w-[25rem] laptop:center laptop:gap-5 z-10 mt-10 mb-10">
     <slot></slot>
-    <div class="center-col gap-2 laptop:gap-3">
+    <div class="center-col gap-4 laptop:gap-3">
         <div id="counter" class="h-2">
-            <Incrementer toNumber={100} symbol={symbol} client:visible/>
+            <Incrementer toNumber={number} symbol={symbol} client:visible/>
         </div>
         <h2 class="text-4xl laptop:text-5xl"></h2>
-        <p class="text-gold-color text-center">casos exitosos</p>
+        <p class="text-gold-color text-center">{description}</p>
     </div>
 </div>
