--- a/Frontend/src/layouts/Layout.astro
+++ b/Frontend/src/layouts/Layout.astro
@@ -12,9 +12,24 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/static/iconos/32icon.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://estudiojuridicoad.com" />
+		<meta property="og:title" content="Estudio Jurídico AD" />
+		<meta property="og:description" content="DESCRIPCION_DE_TU_PAGINA" />
+		<meta property="og:image" content="/static/iconos/thumbnail.jpg" />
+	
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://estudiojuridicoad.com" />
+		<meta property="twitter:title" content="Estudio Jurídico AD" />
+		<meta property="twitter:description" content="DESCRIPCION_DE_TU_PAGINA" />
+		<meta property="twitter:image" content="/static/iconos/thumbnail.jpg" />
 	</head>
 	<body>
 		<slot />
@@ -56,7 +71,9 @@ const { title } = Astro.props;
 	.shadow1{
 		box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 	}
-
+	.suave {
+    	transition: all 0.1s ease-in-out;
+	}
 	@layer components{
 
 		.full{
