--- a/Frontend/src/pages/index.astro
+++ b/Frontend/src/pages/index.astro
@@ -9,13 +9,13 @@ import Inmobiliario from '@components/inmobiliario/components/Inmobiliario.astro
 import Footer from '@components/footer/components/Footer.astro';
 import Whatsapp from '@components/whatsapp/Whatsapp.astro';
 import Chat from '@components/chat/components/Chat';
-
+import Credits from '@components/credits/components/Credits.astro'
 // Enums
 import { UserTypeEnum } from '../features/chat/enums/chat.enum';
 
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Estudio Jurídico AD">
 	<main class="overflow-hidden">
 		<Header/>
 		<Stats/>
@@ -26,6 +26,7 @@ import { UserTypeEnum } from '../features/chat/enums/chat.enum';
 		<Footer/>
 		<Chat actual_user={UserTypeEnum.AnonymousUser} client:load/>
 		<Whatsapp/>
+		<Credits/>
 	</main>
 </Layout>
 
